frontend/test/typecheck/error/nonbool-if-cond.fc
int foo(int i) {
    if (i)
        return 1;
    else
        return 0;
}
